--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <link type="text/css" rel="stylesheet" href="style.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width initial-scale=1.0" />
-    <title>Acmde Departments and Employees</title>
+    <title>Acme Departments and Employees</title>
     <script defer src="/dist/main.js"></script>
   </head>
   <body>
     <h1>Acme Departments and Employees</h1>
+    <div id="totals"></div>
     <div id="header"></div>
   </body>
 </html>
